--- a/app/templates/uploadfile.html
+++ b/app/templates/uploadfile.html
@@ -9,5 +9,8 @@
          <input type="file" name="program_outline" /><br>
          <input type="submit"/>
       </form>
+
+      <br><br>
+      <img src="http://dev-1.aiti-kace.com.gh:2020/event/read_image" width="300" height="200">
    </body>
 </html>
